@@ -1,2 +1,5 @@
 -- Fix bug [#001] 2018-09-12 23:50:23 ZTS core-dump
 -- Fix bug [#002] 2019-02-13 10:43:00 ZTS segementation-fault
+-- Add Feature Annotation doc support Windows format
+-- Add Feature Annotation support \t char. or space char.
+-- Modify the PHP tip doc.
